--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,28 @@
-quarkus.http.cors=true
-quarkus.http.cors.origins=http://example.com
-quarkus.http.cors.methods=GET,PUT,POST,DELETE
-quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+greeting.message=Hello World
+greeting.upper-case=true
+greeting.suffix=!!, How are you???
+greeting.vat=21%
+hello.message="Hey Cho"
+hello.suffix=!!, How are you???
+hello.output.recipients=John,Taylor
+#set 7 should see error as bean validation
+hello.repeat=2
+hello.email=hello@gmail.com
 
-#Secure Connections with SSL
-quarkus.http.ssl-port=8443
-# keystore type and location reactivve to sr/main/resources
-quarkus.http.ssl.certificate.key-store-file=keystore.jks
-quarkus.http.ssl.certificate.key-store-file-type=jks
-#password to open keystore
-quarkus.http.ssl.certificate.key-store-password=changeit
+#Configuring with Profiles
+#%dev.quarkus.http.port=8181
+#%test.quarkus.http.port=8111
+
+#Changing Logger Configuration
+#quarkus.log.level=DEBUG
+#quarkus.log.file.enable=true
+#quarkus.log.category."com.example".level=WARNING
+
+#GELF
+#quarkus.log.handler.gelf.enabled=true
+#quarkus.log.handler.gelf.host=localhost
+#quarkus.log.handler.gelf.port=12201
+
+#custom profile
+%staging.quarkus.http.port=8182
+
