--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-quarkus.http.cors=true
-quarkus.http.cors.origins=http://example.com
-quarkus.http.cors.methods=GET,PUT,POST,DELETE
-quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
-
-#Secure Connections with SSL
-quarkus.http.ssl-port=8443
-# keystore type and location reactivve to sr/main/resources
-quarkus.http.ssl.certificate.key-store-file=keystore.jks
-quarkus.http.ssl.certificate.key-store-file-type=jks
-#password to open keystore
-quarkus.http.ssl.certificate.key-store-password=changeit
+#uber-jar packaging
+#quarkus.package.uber-jar=true
+#quarkus.ssl.native=true
